GPII-118: Add the ToC to the simply option

--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -38,6 +38,8 @@
         </div>  
         <!-- END markup for fat-panel UI Options -->
 
+        <div class="flc-toc-tocContainer toc"> </div>
+
         <h1>Discovery Tool Demo</h1>
         <a href="#">Learn more about the Discovery Tool.</a>
         <input type="text" placeholder="type something" />
