GPII-118: Add the content simplification enactor.

--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -40,8 +40,20 @@
 
         <div class="flc-toc-tocContainer toc"> </div>
 
-        <h1>Discovery Tool Demo</h1>
-        <a href="#">Learn more about the Discovery Tool.</a>
-        <input type="text" placeholder="type something" />
+        <div class="flc-uiOptions-content">
+            <header>This is a header.</header>
+            <nav>
+                This is some nav.
+            </nav>
+            <article>
+                <h1>Discovery Tool Demo</h1>
+                <a href="#">Learn more about the Discovery Tool.</a>
+                <input type="text" placeholder="type something" />
+                <aside>
+                    <h3>Aside</h3>
+                    This is an aside.</aside>
+            </article>
+            <footer>This is a footer.</footer>
+        </div>
     </body>
 </html>
