GPII-118: Add the self-voicing enactor and panel

--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" href="../../src/lib/infusion/components/uiOptions/css/fss/fss-theme-bw-uio.css" />
 
         <script type="text/javascript" src="../../src/lib/infusion/MyInfusion.js"></script>
+        <script type="text/javascript" src="../../src/discoveryTool/js/SelfVoicingEnactor.js"></script>
         <script type="text/javascript" src="../../src/discoveryTool/js/DiscoveryTool.js"></script>
 
         <script type="text/javascript" src="demo.js"></script>
