--- a/src/discoveryTool/html/DiscoveryTool.html
+++ b/src/discoveryTool/html/DiscoveryTool.html
@@ -4,6 +4,7 @@
             <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-highContrast"></div></li>
             <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-increaseSize"></div></li>
             <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-simplify"></div></li>
+            <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-spoken"></div></li>
         </ul>
     </div>
 </form>
