GPII-118: Starting to style discovery tool

--- a/src/discoveryTool/html/FatPanelUIOptionsFrame.html
+++ b/src/discoveryTool/html/FatPanelUIOptionsFrame.html
@@ -22,6 +22,7 @@
         <!-- Component styles -->
         <link rel="stylesheet" type="text/css" href="../../lib/infusion/components/uiOptions/css/UIOptions.css" />
         <link rel="stylesheet" type="text/css" href="../../lib/infusion/components/uiOptions/css/FatPanelUIOptionsFrame.css" />
+        <link rel="stylesheet" type="text/css" href="../css/DiscoveryTool.css" />        
 
         <!--[if IE 8]>
             <link rel="stylesheet" type="text/css" href="../css/ie8.css" />
