--- a/src/discoveryTool/html/HighContrastPanelTemplate.html
+++ b/src/discoveryTool/html/HighContrastPanelTemplate.html
@@ -1,7 +1,10 @@
-<h2><span class="fl-icon-links"></span><span class="flc-discoveryTool-highContrast-label heading-text">high contrast panel</span></h2>
+<!-- h2><span class="fl-icon-links"></span><span class="flc-discoveryTool-highContrast-label heading-text">high contrast panel</span></h2>
 <ul class="fl-inputs fl-links-buttons-options">
     <li>
         <input type="checkbox" id="highContrast-choice" class="flc-discoveryTool-highContrast-choice fl-force-left" />
         <label class="flc-discoveryTool-highContrast-choice-label" for="highContrast-choice">high contrast label</label>
     </li> 
-</ul>
+</ul -->
+
+<span class="fl-icon-links" aria-label="" role="image"></span>
+<h2>More Contrast</h2>
