--- a/src/discoveryTool/html/IncreaseSizePanelTemplate.html
+++ b/src/discoveryTool/html/IncreaseSizePanelTemplate.html
@@ -1,7 +1,10 @@
-<h2><span class="fl-icon-links"></span><span class="flc-discoveryTool-increaseSize-label heading-text">increase size panel</span></h2>
+<!-- h2><span class="fl-icon-links"></span><span class="flc-discoveryTool-increaseSize-label heading-text">increase size panel</span></h2>
 <ul class="fl-inputs fl-links-buttons-options">
     <li>
         <input type="checkbox" id="increaseSize-choice" class="flc-discoveryTool-increaseSize-choice fl-force-left" />
         <label class="flc-discoveryTool-increaseSize-choice-label" for="increaseSize-choice">increase size label</label>
     </li> 
-</ul>
+</ul -->
+
+<span class="fl-icon-links" aria-label="" role="image"></span>
+<h2>Enlarge</h2>
