--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" type="text/css" href="../../src/lib/infusion/framework/fss/css/fss-base-global.css" />
         <link rel="stylesheet" type="text/css" href="../../src/lib/infusion/framework/fss/css/fss-text.css" />
         <link rel="stylesheet" type="text/css" href="../../src/lib/infusion/components/uiOptions/css/fss/fss-theme-bw-uio.css" />
+        
+        <link rel="stylesheet" type="text/css" href="demo.css" />
 
         <script type="text/javascript" src="../../src/lib/infusion/MyInfusion.js"></script>
         <script type="text/javascript" src="../../src/discoveryTool/js/SelfVoicingEnactor.js"></script>
@@ -24,21 +26,6 @@
             })
         </script>
 
-        <!-- BEGIN markup for fat-panel UI Options -->
-        <div class="flc-uiOptions-fatPanel fl-uiOptions-fatPanel">
-            <!-- This is the div that will contain the UI Options component -->
-            <div class="flc-slidingPanel-panel flc-uiOptions-iframe"></div>
-
-            <!-- This div is for the sliding panel that shows and hides the UI Options controls -->
-            <div class="fl-panelBar">
-                <span class="fl-uio-tabs">
-                    <button id="reset" class="flc-uiOptions-reset fl-uiOptions-reset"><span class="fl-icon-undo"></span> Reset</button>
-                    <button id="show-hide" class="flc-slidingPanel-toggleButton fl-uiOptions-showHide"> Show/Hide</button>
-                </span>
-            </div>
-        </div>  
-        <!-- END markup for fat-panel UI Options -->
-
         <div class="flc-toc-tocContainer toc"> </div>
 
         <div class="flc-uiOptions-content">
@@ -56,5 +43,18 @@
             </article>
             <footer>This is a footer.</footer>
         </div>
+        
+        <!-- BEGIN markup for fat-panel UI Options -->
+        <div class="flc-uiOptions-fatPanel fl-uiOptions-fatPanel">
+            <!-- This is the div that will contain the UI Options component -->
+            <div class="flc-slidingPanel-panel flc-uiOptions-iframe"></div>
+
+            <!-- This div is for the sliding panel that shows and hides the UI Options controls -->
+            <div class="fl-panelBar">
+                <!-- button id="reset" class="flc-uiOptions-reset fl-uiOptions-reset"><span class="fl-icon-undo"></span> Reset</button -->
+                <button id="show-hide" class="flc-slidingPanel-toggleButton fl-uiOptions-showHide"> Show/Hide</button>
+            </div>
+        </div>  
+        <!-- END markup for fat-panel UI Options -->        
     </body>
 </html>
