--- a/src/discoveryTool/html/SpokenPanelTemplate.html
+++ b/src/discoveryTool/html/SpokenPanelTemplate.html
@@ -1,7 +1,10 @@
-<h2><span class="fl-icon-links"></span><span class="flc-discoveryTool-spoken-label heading-text">spoken panel</span></h2>
+<!-- h2><span class="fl-icon-links"></span><span class="flc-discoveryTool-spoken-label heading-text">spoken panel</span></h2>
 <ul class="fl-inputs fl-links-buttons-options">
     <li>
         <input type="checkbox" id="spoken-choice" class="flc-discoveryTool-spoken-choice fl-force-left" />
         <label class="flc-discoveryTool-spoken-choice-label" for="spoken-choice">spoken label</label>
     </li> 
-</ul>
+</ul -->
+
+<span class="fl-icon-links" aria-label="" role="image"></span>
+<h2>Speak</h2>
