GPII-118: Added buttons to replace controls

--- a/src/discoveryTool/html/HighContrastPanelTemplate.html
+++ b/src/discoveryTool/html/HighContrastPanelTemplate.html
@@ -6,5 +6,5 @@
     </li> 
 </ul -->
 
-<span class="fl-icon-links" aria-label="" role="image"></span>
+<button class="flc-discoveryTool-highContrast-choice fl-icon-links" aria-label=""></button>
 <h2>More Contrast</h2>
