--- a/src/discoveryTool/html/IncreaseSizePanelTemplate.html
+++ b/src/discoveryTool/html/IncreaseSizePanelTemplate.html
@@ -6,5 +6,5 @@
     </li> 
 </ul -->
 
-<span class="fl-icon-links" aria-label="" role="image"></span>
+<button class="flc-discoveryTool-increaseSize-choice fl-icon-links" aria-label="" role="image"></button>
 <h2>Enlarge</h2>
