--- a/src/discoveryTool/html/SpokenPanelTemplate.html
+++ b/src/discoveryTool/html/SpokenPanelTemplate.html
@@ -6,5 +6,5 @@
     </li> 
 </ul -->
 
-<span class="fl-icon-links" aria-label="" role="image"></span>
+<button class="flc-discoveryTool-spoken-choice fl-icon-links" aria-label=""></button>
 <h2>Speak</h2>
