GPII-118: Panel opens from bottom, panel markup changed, styling

--- a/src/discoveryTool/html/HighContrastPanelTemplate.html
+++ b/src/discoveryTool/html/HighContrastPanelTemplate.html
@@ -6,5 +6,5 @@
     </li> 
 </ul -->
 
-<button class="flc-discoveryTool-highContrast-choice fl-icon-links" aria-label=""></button>
-<h2>More Contrast</h2>
+<button class="flc-discoveryTool-highContrast-choice" id="high-contrast"><span class="fl-icon-links" aria-label="" role="image"></span></button>
+<label class="flc-discoveryTool-highContrast-choice-label" for="high-contrast">More Contrast</label>
