--- a/src/discoveryTool/html/SimplifyPanelTemplate.html
+++ b/src/discoveryTool/html/SimplifyPanelTemplate.html
@@ -6,5 +6,5 @@
     </li> 
 </ul -->
 
-<button class="flc-discoveryTool-simplify-choice fl-icon-links" aria-label=""></button>
-<h2>Simplify</h2>
+<button class="flc-discoveryTool-simplify-choice" id="simplify"><span class="fl-icon-links" aria-label="" role="image"></span></button>
+<label for="simplify">Simplify</label>
