--- a/src/discoveryTool/html/SpokenPanelTemplate.html
+++ b/src/discoveryTool/html/SpokenPanelTemplate.html
@@ -6,5 +6,5 @@
     </li> 
 </ul -->
 
-<button class="flc-discoveryTool-spoken-choice fl-icon-links" aria-label=""></button>
-<h2>Speak</h2>
+<button class="flc-discoveryTool-spoken-choice" id="speak"><span class="fl-icon-links" aria-label="" role="image"></span></button>
+<label for="speak">Speak</label>
