GPII-118: Created ref to fl-discoveryTool instead of over-riding fl-fatPanel

--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -21,7 +21,7 @@
         <script type="text/javascript">
             $(document).ready(function () {
                 demo.initSettingsStore();
-                demo.initPageEnhancer("discovery-tool-demo");
+                demo.initPageEnhancer("discovery-tool-theme");
                 demo.initFatPanel(".flc-uiOptions-fatPanel");
             })
         </script>
@@ -45,7 +45,7 @@
         </div>
         
         <!-- BEGIN markup for fat-panel UI Options -->
-        <div class="flc-uiOptions-fatPanel fl-uiOptions-fatPanel">
+        <div class="flc-uiOptions-fatPanel fl-uiOptions-discoveryTool">
 
             <!-- This div is for the sliding panel that shows and hides the UI Options controls -->
             <div class="fl-panelBar">
