--- a/src/discoveryTool/html/DiscoveryTool.html
+++ b/src/discoveryTool/html/DiscoveryTool.html
@@ -1,7 +1,7 @@
 <form id="options" action="" class="flc-uiOptions-fatPanel-tabs fl-uiOptions">
     <div class="flc-uiOptions-controls">
         <ul class="fl-uiOptions-panels">
-            <li class="fl-uiOptions-panel"><span class="fl-discoveryTool-try">Try something new</span></li>
+            <li class="fl-uiOptions-panel"><div class="fl-discoveryTool-try">Try something new</div></li>
             <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-highContrast"></div></li>
             <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-increaseSize"></div></li>
             <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-simplify"></div></li>
