--- a/src/discoveryTool/html/FatPanelUIOptionsFrame.html
+++ b/src/discoveryTool/html/FatPanelUIOptionsFrame.html
@@ -21,7 +21,7 @@
 
         <!-- Component styles -->
         <link rel="stylesheet" type="text/css" href="../../lib/infusion/components/uiOptions/css/UIOptions.css" />
-        <link rel="stylesheet" type="text/css" href="../../lib/infusion/components/uiOptions/css/FatPanelUIOptionsFrame.css" />
+        <!-- link rel="stylesheet" type="text/css" href="../../lib/infusion/components/uiOptions/css/FatPanelUIOptionsFrame.css" / -->
         <link rel="stylesheet" type="text/css" href="../css/DiscoveryTool.css" />        
 
         <!--[if IE 8]>
@@ -33,7 +33,7 @@
         <script type="text/javascript" src="../../lib/infusion/MyInfusion.js"></script>
      </head>
 
-    <body class="fl-uiOptions-fatPanel fl-focus">
+    <body class="fl-uiOptions-discoveryTool fl-focus">
         <span class="fl-hidden">
             <div class="flc-toc-tocContainer"></div>
         </span>
