GPII-118: Checkmark toggle added, depending on aria-pressed state of button

--- a/src/discoveryTool/html/HighContrastPanelTemplate.html
+++ b/src/discoveryTool/html/HighContrastPanelTemplate.html
@@ -7,4 +7,5 @@
 </ul -->
 
 <button class="flc-discoveryTool-highContrast-choice" id="high-contrast"><span class="fl-icon-links" aria-label="" role="image"></span></button>
+<div class="fl-icon-check" role="image"></div>
 <label class="flc-discoveryTool-highContrast-choice-label" for="high-contrast">More Contrast</label>
