--- a/src/discoveryTool/html/SimplifyPanelTemplate.html
+++ b/src/discoveryTool/html/SimplifyPanelTemplate.html
@@ -7,4 +7,5 @@
 </ul -->
 
 <button class="flc-discoveryTool-simplify-choice" id="simplify"><span class="fl-icon-links" aria-label="" role="image"></span></button>
+<div class="fl-icon-check" role="image"></div>
 <label for="simplify">Simplify</label>
