GPII-118: Added icons for button panel.

--- a/src/discoveryTool/html/SimplifyPanelTemplate.html
+++ b/src/discoveryTool/html/SimplifyPanelTemplate.html
@@ -6,6 +6,6 @@
     </li> 
 </ul -->
 
-<button class="flc-discoveryTool-simplify-choice" id="simplify"><span class="fl-icon-links" aria-label="" role="image"></span></button>
+<button class="flc-discoveryTool-simplify-choice" id="simplify"><span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-simplify" aria-label="" role="image"></span></button>
 <div class="fl-icon-check" role="image"></div>
 <label for="simplify">Simplify</label>
