--- a/src/discoveryTool/html/SpokenPanelTemplate.html
+++ b/src/discoveryTool/html/SpokenPanelTemplate.html
@@ -6,6 +6,6 @@
     </li> 
 </ul -->
 
-<button class="flc-discoveryTool-spoken-choice" id="speak" aria-pressed="true"><span class="fl-icon-links" aria-label="" role="image"></span></button>
+<button class="flc-discoveryTool-spoken-choice" id="speak" aria-pressed="true"><span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-speak" aria-label="" role="image"></span></button>
 <div class="fl-icon-check" role="image"></div>
 <label for="speak">Speak</label>
