--- a/src/discoveryTool/html/HighContrastPanelTemplate.html
+++ b/src/discoveryTool/html/HighContrastPanelTemplate.html
@@ -6,6 +6,6 @@
     </li> 
 </ul -->
 
-<button class="flc-discoveryTool-highContrast-choice" id="high-contrast"><span class="fl-icon-links" aria-label="" role="image"></span></button>
+<button class="flc-discoveryTool-highContrast-choice" id="high-contrast"><span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-high-contrast" aria-label="" role="image"></span></button>
 <div class="fl-icon-check" role="image"></div>
 <label class="flc-discoveryTool-highContrast-choice-label" for="high-contrast">More Contrast</label>
