--- a/src/discoveryTool/html/IncreaseSizePanelTemplate.html
+++ b/src/discoveryTool/html/IncreaseSizePanelTemplate.html
@@ -6,6 +6,6 @@
     </li> 
 </ul -->
 
-<button class="flc-discoveryTool-increaseSize-choice" id="increase-size"><span class="fl-icon-links" aria-label="" role="image"></span></button>
+<button class="flc-discoveryTool-increaseSize-choice" id="increase-size"><span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-increase-size" aria-label="" role="image"></span></button>
 <div class="fl-icon-check" role="image"></div>
 <label for="increase-size">Enlarge</label>
