--- a/src/discoveryTool/html/LowContrastPanelTemplate.html
+++ b/src/discoveryTool/html/LowContrastPanelTemplate.html
@@ -1,3 +1,3 @@
-<button class="flc-discoveryTool-lowContrast-choice" id="low-contrast"><span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-low-contrast" aria-label="" role="image"></span></button>
+<button class="flc-discoveryTool-lowContrast-choice fl-discoveryTool-panel-icon fl-discoveryTool-icon-low-contrast" id="low-contrast"></button>
 <div class="fl-icon-check" role="image"></div>
 <label class="flc-discoveryTool-lowContrast-choice-label" for="low-contrast">Less Contrast</label>
