--- a/src/discoveryTool/html/SimplifyPanelTemplate.html
+++ b/src/discoveryTool/html/SimplifyPanelTemplate.html
@@ -1,3 +1,3 @@
-<button class="flc-discoveryTool-simplify-choice" id="simplify"><span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-simplify" aria-label="" role="image"></span></button>
+<button class="flc-discoveryTool-simplify-choice fl-discoveryTool-panel-icon fl-discoveryTool-icon-simplify" id="simplify"></button>
 <div class="fl-icon-check" role="image"></div>
 <label for="simplify">Simplify</label>
