GPII-132: Changed markup implementation from using Button to Checkbox input. Todo: fix hover styles.

--- a/src/discoveryTool/html/HighContrastPanelTemplate.html
+++ b/src/discoveryTool/html/HighContrastPanelTemplate.html
@@ -1,3 +1,8 @@
-<button class="flc-discoveryTool-highContrast-choice fl-discoveryTool-panel-icon fl-discoveryTool-icon-high-contrast" id="high-contrast"></button>
-<div class="fl-icon-check" role="image"></div>
-<label class="flc-discoveryTool-highContrast-choice-label" for="high-contrast">More Contrast</label>
+<!--<button class="flc-discoveryTool-highContrast-choice fl-discoveryTool-panel-icon fl-discoveryTool-icon-high-contrast" id="high-contrast"></button>-->
+<input type="checkbox" id="high-contrast" class="flc-discoveryTool-highContrast-choice fl-discoveryTool-checkbox" />
+
+<label class="flc-discoveryTool-highContrast-choice-label" for="high-contrast">
+	<span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-high-contrast"></span>
+	<div class="fl-icon-check" role="image"></div>
+	More Contrast
+</label>
