--- a/src/discoveryTool/html/IncreaseSizePanelTemplate.html
+++ b/src/discoveryTool/html/IncreaseSizePanelTemplate.html
@@ -1,3 +1,9 @@
-<button class="flc-discoveryTool-increaseSize-choice fl-discoveryTool-panel-icon fl-discoveryTool-icon-increase-size" id="increase-size"></button>
-<div class="fl-icon-check" role="image"></div>
-<label for="increase-size">Enlarge</label>
+<!--<button class="flc-discoveryTool-increaseSize-choice fl-discoveryTool-panel-icon fl-discoveryTool-icon-increase-size" id="increase-size"></button>-->
+
+<input type="checkbox" id="increase-size" class="flc-discoveryTool-increaseSize-choice fl-discoveryTool-checkbox" />
+<label for="increase-size">
+	<span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-increase-size"></span>
+	<div class="fl-icon-check" role="image"></div>
+	Enlarge
+</label>
+
