--- a/src/discoveryTool/html/SimplifyPanelTemplate.html
+++ b/src/discoveryTool/html/SimplifyPanelTemplate.html
@@ -1,3 +1,7 @@
-<button class="flc-discoveryTool-simplify-choice fl-discoveryTool-panel-icon fl-discoveryTool-icon-simplify" id="simplify"></button>
-<div class="fl-icon-check" role="image"></div>
-<label for="simplify">Simplify</label>
+<!--<button class="flc-discoveryTool-simplify-choice fl-discoveryTool-panel-icon fl-discoveryTool-icon-simplify" id="simplify"></button>-->
+<input type="checkbox" id="simplify" class="flc-discoveryTool-simplify-choice fl-discoveryTool-checkbox" />
+<label for="simplify">
+	<span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-simplify"></span>
+	<div class="fl-icon-check" role="image"></div>
+	Simplify
+</label>
