--- a/src/discoveryTool/html/SpokenPanelTemplate.html
+++ b/src/discoveryTool/html/SpokenPanelTemplate.html
@@ -1,3 +1,8 @@
-<button class="flc-discoveryTool-spoken-choice fl-discoveryTool-panel-icon fl-discoveryTool-icon-speak" id="speak" aria-pressed="true"></button>
-<div class="fl-icon-check" role="image"></div>
-<label for="speak">Speak</label>
+<!--<button class="flc-discoveryTool-spoken-choice fl-discoveryTool-panel-icon fl-discoveryTool-icon-speak" id="speak" aria-pressed="true"></button>-->
+<input type="checkbox" id="speak" class="flc-discoveryTool-speak-choice fl-discoveryTool-checkbox" />
+
+<label for="speak">
+	<span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-speak"></span>
+	<div class="fl-icon-check" role="image"></div>
+	Speak
+</label>
