GPII-132: Changed the Discovery Tool preset icons to use checkboxes instead of button.

--- a/src/discoveryTool/html/LowContrastPanelTemplate.html
+++ b/src/discoveryTool/html/LowContrastPanelTemplate.html
@@ -1,3 +1,6 @@
-<button class="flc-discoveryTool-lowContrast-choice fl-discoveryTool-panel-icon fl-discoveryTool-icon-low-contrast" id="low-contrast"></button>
-<div class="fl-icon-check" role="image"></div>
-<label class="flc-discoveryTool-lowContrast-choice-label" for="low-contrast">Less Contrast</label>
+<input type="checkbox" id="low-contrast" class="flc-discoveryTool-lowContrast-choice fl-discoveryTool-checkbox" />
+<label class="flc-discoveryTool-lowContrast-choice-label" for="low-contrast">
+	<span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-low-contrast"></span>
+	<div class="fl-icon-check" role="image"></div>
+	Less Contrast
+</label>
