GPII-134: Put icon text labels into their own container and aligned them closer to the icon itself.

--- a/src/discoveryTool/html/HighContrastPanelTemplate.html
+++ b/src/discoveryTool/html/HighContrastPanelTemplate.html
@@ -2,5 +2,5 @@
 <label class="flc-discoveryTool-highContrast-choice-label" for="high-contrast">
 	<span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-high-contrast"></span>
 	<div class="fl-icon-check" role="image"></div>
-	More Contrast
+	<div class="fl-icon-text">More Contrast</div>
 </label>
