--- a/src/discoveryTool/html/LowContrastPanelTemplate.html
+++ b/src/discoveryTool/html/LowContrastPanelTemplate.html
@@ -2,5 +2,5 @@
 <label class="flc-discoveryTool-lowContrast-choice-label" for="low-contrast">
 	<span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-low-contrast"></span>
 	<div class="fl-icon-check" role="image"></div>
-	Less Contrast
+	<div class="fl-icon-text">Less Contrast</div>
 </label>
