--- a/src/discoveryTool/html/SimplifyPanelTemplate.html
+++ b/src/discoveryTool/html/SimplifyPanelTemplate.html
@@ -2,5 +2,5 @@
 <label for="simplify">
 	<span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-simplify"></span>
 	<div class="fl-icon-check" role="image"></div>
-	Simplify
+	<div class="fl-icon-text">Simplify</div>
 </label>
