--- a/src/discoveryTool/html/IncreaseSizePanelTemplate.html
+++ b/src/discoveryTool/html/IncreaseSizePanelTemplate.html
@@ -2,6 +2,6 @@
 <label for="increase-size">
 	<span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-increase-size"></span>
 	<div class="fl-icon-check" role="image"></div>
-	Enlarge
+	<div class="fl-icon-text">Enlarge</div>
 </label>
 
