--- a/src/discoveryTool/html/SpokenPanelTemplate.html
+++ b/src/discoveryTool/html/SpokenPanelTemplate.html
@@ -2,5 +2,5 @@
 <label for="speak">
 	<span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-speak"></span>
 	<div class="fl-icon-check" role="image"></div>
-	Speak
+	<div class="fl-icon-text">Speak</div>
 </label>
