--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -31,8 +31,12 @@
 
     <div class="flc-uiOptions-content">
         <header id="main-header">
-            <div>
-                <img src="images/logo_ck12.png" alt="ck-12 logo" />
+            <div id="main-header-content">
+                <img src="images/logo_ck12.png" alt="ck-12 logo" /> 
+                
+                <div>
+                    <input type="text" placeholder="SEARCH" /> <span class="fl-icon-search" role="presentation"></span><a href="#" class="subjects">Subjects</a>    
+                </div>                       
             </div>
         </header>
         
