--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -35,7 +36,7 @@
                 <img src="images/logo_ck12.png" alt="ck-12 logo" /> 
                 
                 <div>
-                    <input type="text" placeholder="SEARCH" /> <span class="fl-icon-search" role="presentation"></span><a href="#" class="subjects">Subjects</a>    
+                    <input type="search" placeholder="SEARCH" /> <span class="fl-icon-search" role="presentation"></span><a href="#" class="subjects">Subjects</a>    
                 </div>                       
             </div>
         </header>
