GPII-135: Low contrast preset added.
Added the low contrast preset. However there needs to still be functionality to toggle between low/high contrast when setting one or the other. Meaning it should not be possible for both settings to be in the on state at the same time.

--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-layout.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-text.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-bw-uio.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-lgdg-uio.css" />
 
     <link rel="stylesheet" type="text/css" href="demo.css" />
 
