--- a/src/discoveryTool/html/DiscoveryTool.html
+++ b/src/discoveryTool/html/DiscoveryTool.html
@@ -3,6 +3,7 @@
         <ul class="fl-uiOptions-panels">
             <li class="fl-uiOptions-panel"><div class="fl-discoveryTool-try">Try something new <span class="fl-icon-arrow" aria-label="Arrow" role="presentation"></span></div></li>
             <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-highContrast"></div></li>
+            <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-lowContrast"></div></li>
             <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-increaseSize"></div></li>
             <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-simplify"></div></li>
             <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-spoken"></div></li>
