GPII-142: Header, breadcrumbs, prev/next, menu, etc. css tweaked

--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -48,11 +48,11 @@
         
                 <div id="breadcrumbs">
                     <a href="#">Physical Science</a> > 
-                    <a href="">Electrons</a>
+                    <a href="#">Electrons</a>
                 </div>
         
                 <div id="prevNext">
-                    <a href="#"><span class="fl-icon-prev" aria-label="Previous" role="image"></span></a> | 
+                    <a href="#"><span class="fl-icon-prev" aria-label="Previous" role="image"></span></a>  
                     <a href="#"><span class="fl-icon-next" aria-label="Next" role="image"></span></a>
                 </div>
             </header>
@@ -60,7 +60,7 @@
             <div id="main">            
                 <div id="article-filters" class="fl-clearfix">
                     <div id="article-filter">
-                        Read<br>
+                        <span class="fl-font-size-130">Read</span><br>
                         Basic
                     </div>   
                     <div class="article-tab">
