--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../../src/lib/infusion/framework/fss/css/fss-text.css" />
     <link rel="stylesheet" type="text/css" href="../../src/lib/infusion/components/uiOptions/css/fss/fss-theme-bw-uio.css" />
     
+    <link rel="stylesheet" type="text/css" href="../../src/discoveryTool/css/DiscoveryTool.css" />
     <link rel="stylesheet" type="text/css" href="demo.css" />
 
     <script type="text/javascript" src="../../src/lib/infusion/MyInfusion.js"></script>
