--- a/src/discoveryTool/html/DiscoveryTool.html
+++ b/src/discoveryTool/html/DiscoveryTool.html
@@ -1,4 +1,4 @@
-<form id="options" action="" class="flc-uiOptions-fatPanel-tabs fl-uiOptions">
+<form id="options" action="" class="flc-uiOptions-fatPanel-tabs fl-uiOptions fl-inverted-color">
     <div class="flc-uiOptions-controls">
         <ul class="fl-uiOptions-panels">
             <li class="fl-uiOptions-panel"><div class="fl-discoveryTool-try">Try something new <span class="fl-icon-arrow" aria-label="Arrow" role="presentation"></span></div></li>
