--- a/src/discoveryTool/html/FatPanelUIOptionsFrame.html
+++ b/src/discoveryTool/html/FatPanelUIOptionsFrame.html
@@ -9,7 +9,9 @@
         <link rel="stylesheet" type="text/css" href="../../shared/lib/infusion/framework/fss/css/fss-layout.css" />
         <link rel="stylesheet" type="text/css" href="../../shared/lib/infusion/framework/fss/css/fss-text.css" />
         <link rel="stylesheet" type="text/css" href="../../shared/lib/infusion/components/uiOptions/css/fss/fss-theme-bw-uio.css" />
+        <link rel="stylesheet" type="text/css" href="../../shared/lib/infusion/components/uiOptions/css/fss/fss-theme-wb-uio.css" />
         <link rel="stylesheet" type="text/css" href="../../shared/lib/infusion/components/uiOptions/css/fss/fss-theme-lgdg-uio.css" />
+        <link rel="stylesheet" type="text/css" href="../../shared/lib/infusion/components/uiOptions/css/fss/fss-theme-dglg-uio.css" />
         <link rel="stylesheet" type="text/css" href="../../shared/lib/infusion/components/uiOptions/css/fss/fss-text-uio.css" />
 
         <!-- Component styles -->
@@ -26,7 +28,7 @@
         <script type="text/javascript" src="../../shared/lib/infusion/MyInfusion.js"></script>
      </head>
 
-    <body class="fl-uiOptions-discoveryTool fl-focus">
+    <body class="fl-uiOptions-discoveryTool fl-focus fl-inverted-color">
         <span class="fl-hidden">
             <div class="flc-toc-tocContainer"></div>
         </span>
