--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -79,7 +79,7 @@
 	        // The global values:
 	        "namespace": "fluid.uiOptions.constructed",
 	        "templatePrefix": "../../src/pmt/html/", // The common path to settings panel templates
-	        "template": "%prefix/FatPanelUIOptions.html",
+	        "template": "%prefix/FullPreviewUIOptions.html",
 	        "messagePrefix": "../../src/shared/lib/infusion/components/uiOptions/messages/",
 	        "message": "%prefix/uiOptions.json",
 	 
@@ -149,29 +149,32 @@
 	
     $(document).ready(function () {
     	//fluid.uiOptions.constructed.uio(".flc-uiOpions-fatPanel");
-    	fluid.invokeGlobalFunction(uioBuilder.options.assembledUIOGrade, [".flc-uiOptions-fatPanel"]);
+    	fluid.invokeGlobalFunction(uioBuilder.options.assembledUIOGrade, ["#myUIOptions"]);
     	
     	//fluid.uiOptions.constructed.uie();
     })
 </script>
 
+<style type="text/css">
+
+	.flc-iframe	{
+		display: block !important;
+	}
+
+</style>
 </head>
 <body>
 
-	<!-- BEGIN markup for fat-panel UI Options -->
-    <div class="flc-uiOptions-fatPanel">
-
-        <!-- This div is for the sliding panel that shows and hides the UI Options controls -->
-        <div class="fl-panelBar fl-inverted-color">
-            <!-- button id="reset" class="flc-uiOptions-reset fl-uiOptions-reset"><span class="fl-icon-undo"></span> Reset</button -->
-            <button id="show-hide" class="flc-slidingPanel-toggleButton fl-uiOptions-showHide"> Show/Hide</button>
-        </div>
-
-        <!-- This is the div that will contain the UI Options component -->
-        <div class="flc-slidingPanel-panel flc-uiOptions-iframe"></div>
-
+	<!-- This div should be placed where the Table of Contents is to be displayed -->
+    <div class="flc-toc-tocContainer"> </div>
+ 
+    <h1>Customize Your Presentation Settings</h1>
+ 
+    <!-- This is the div that will contain the UI Options component -->
+    <div id="myUIOptions">
+    	<div class="flc-uiOptions-iframe">
+    	</div> 
     </div>
-    <!-- END markup for fat-panel UI Options -->
     
 </body>
 </html>
