--- a/src/shared/adjusters/html/speakText.html
+++ b/src/shared/adjusters/html/speakText.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <script type="text/javascript" src="MyInfusion.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
+    <script type="text/javascript" src="../../lib/infusion/MyInfusion.js"></script>
     <title>Speak text</title>
 </head>
 
@@ -110,7 +110,6 @@
         $("#more-options").click(function () {
             $("#expanded-top").toggle(400);
             $("#expanded-bottom").toggle(400);
-            var callbacks = $.Callbacks();
             $(this).text(moreOrLessOptions($(this).text()));
         });
     </script>
