--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -159,11 +159,12 @@
 
 	.flc-iframe	{
 		display: block !important;
+		height: 100% !important;
 	}
 
 </style>
 </head>
-<body>
+<body style="height: 100%;">
 
 	<!-- This div should be placed where the Table of Contents is to be displayed -->
     <div class="flc-toc-tocContainer"> </div>
@@ -171,8 +172,8 @@
     <h1>Customize Your Presentation Settings</h1>
  
     <!-- This is the div that will contain the UI Options component -->
-    <div id="myUIOptions">
-    	<div class="flc-uiOptions-iframe">
+    <div id="myUIOptions" style="height: 100%;">
+    	<div class="flc-uiOptions-iframe" style="height: 100%;">
     	</div> 
     </div>
     
