--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-lgdg-uio.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-dglg-uio.css" />    
 
+    <link rel="stylesheet" type="text/css" href="demo.css" />
+
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
     <script type="text/javascript" src="../../src/pmt/js/PreferencesManagementTool.js"></script>
     
@@ -26,16 +28,8 @@
     })
 </script>
 
-<style type="text/css">
-
-	.flc-iframe	{
-		display: block !important;
-		height: 100% !important;
-	}
-
-</style>
 </head>
-<body style="height: 100%;">
+<body>
 
 	<!-- This div should be placed where the Table of Contents is to be displayed -->
     <div class="flc-toc-tocContainer"> </div>
@@ -43,8 +37,8 @@
     <h1>Customize Your Presentation Settings</h1>
  
     <!-- This is the div that will contain the UI Options component -->
-    <div id="myUIOptions" style="height: 100%;">
-    	<div class="flc-uiOptions-iframe" style="height: 100%;">
+    <div id="myUIOptions">
+    	<div class="flc-uiOptions-iframe">
     	</div> 
     </div>
     
