--- a/src/pmt/html/FullPreviewUIOptions.html
+++ b/src/pmt/html/FullPreviewUIOptions.html
@@ -1,11 +1,14 @@
 <form id="options" action="" class="fl-uiOptions fl-uiOptions-fullPreview fl-focus flc-uiOptions-iframe">
     <div class="fl-container-flex60 fl-force-left">
 
+		<h2 class="">increase size</h2>
+        <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div><br/>
+        <div class="flc-uiOptions-line-space fl-uiOptions-category fl-uiOptions-text"></div>
         <!-- <h2 class="fl-uiOptions-text-icon">Text and display</h2>
         <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
-        <div class="flc-uiOptions-text-font fl-uiOptions-category fl-uiOptions-text"></div> -->
+        <div class="flc-uiOptions-text-font fl-uiOptions-category fl-uiOptions-text"></div>
         <div class="flc-uiOptions-line-space fl-uiOptions-category fl-uiOptions-text"></div>
-        <!-- <div class="flc-uiOptions-contrast fl-uiOptions-category fl-uiOptions-text"></div>
+        <div class="flc-uiOptions-contrast fl-uiOptions-category fl-uiOptions-text"></div>
 
         <h2 class="fl-uiOptions-layout-icon">Layout and navigation</h2>
         <div class="flc-uiOptions-layout-controls fl-uiOptions-category fl-uiOptions-layout">
