--- a/src/shared/adjusters/html/speakText.html
+++ b/src/shared/adjusters/html/speakText.html
@@ -12,7 +12,7 @@
     <div class="preference">
         <h2><span class="speakText-onoff-label heading-text"></span></h2>
         <div class="fl-uiOptions-onoff">
-            <input type="checkbox" id="preferenceSwitch" class="speakText-onoff-value fl-force-left" />
+            <input type="checkbox" id="preferenceSwitch" class="gpii-screenReaderTTSEnabled speakText-onoff-value fl-force-left" />
             <label for="preferenceSwitch">
                 <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF"></span>
             </label>
@@ -22,47 +22,27 @@
 
         <div id="expanded-top">
             <h4>Screen reader</h4>
-            <div id="languages">
-                <label for="languagesList">Language</label> <br>
-                <form>
-                    <select id="languagesList" style="width: 134px">
-                        <option selected>English</option>
-                        <option>French (Français)</option>
-                        <option>Russian (Русский)</option>
-                        <option>Spanish (Español)</option>
-                        <option>German (Deutsch)</option>
-                        <option>Chinese (中文)</option>
-                    </select>
-                </form>
+            <div>
+                <h2><label class="flc-languages-label" for="languages"></label></h2>
+                <select class="gpii-auditoryOutLanguage flc-languages fl-inputs" id="languages"></select>
             </div>
         </div>
 
-        <div class="speech-rate">
-            <label for="speech-rate"> Speech rate </label>
-                <form action="">
-                    <select name="rates" id="speech-rate">
-                        <option value="-" selected>-</option>
-                    </select>
-                </form>
+        <div>
+            <h2><label class="flc-speech-rate-label" for="speech-rate"></label></h2>
+            <select class="gpii-speechRate flc-speech-rate fl-inputs" id="speech-rate"></select>
         </div>
 
         <div id="expanded-bottom">
-            <div id="punctuation">
-                <label for="frequency-list">Punctuation verbosity</label>
-                <form action="">
-                    <select name="frequency" id="frequency-list">
-                        <option selected>none</option>
-                        <option>some</option>
-                        <option selected>most</option>
-                        <option>all</option>
-                    </select>
-                </form>
+            <div>
+                <h2><label class="flc-punctuation-label" for="punctuation"></label></h2>
+                <select class="gpii-punctuationVerbosity flc-punctuation fl-inputs" id="punctuation"></select>
             </div>
 
             <div>
                 <h2><span class="ann-upcase-label heading-text"></span></h2>
                 <div class="fl-uiOptions-onoff">
-                    <input type="checkbox" id="announce-uppercase" class="ann-upcase-value fl-force-left" />
+                    <input type="checkbox" id="announce-uppercase" class="gpii-announceCapitals ann-upcase-value fl-force-left" />
                     <label for="announce-uppercase">
                         <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
                         </span>
@@ -73,7 +53,7 @@
             <div>
                 <h2><span class="ann-instructions-label heading-text"></span></h2>
                 <div class="fl-uiOptions-onoff">
-                    <input type="checkbox" id="announce-instructions" class="ann-instructions-value fl-force-left" />
+                    <input type="checkbox" id="announce-instructions" class="gpii-speakTutorialMessages ann-instructions-value fl-force-left" />
                     <label for="announce-instructions">
                         <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
                         </span>
@@ -85,7 +65,7 @@
                 <div>
                     <h2><span class="echo-letter-label heading-text"></span></h2>
                     <div class="fl-uiOptions-onoff">
-                        <input type="checkbox" id="echo-letter" class="echo-letter-value fl-force-left" />
+                        <input type="checkbox" id="echo-letter" class="gpii-keyEcho echo-letter-value fl-force-left" />
                         <label for="echo-letter">
                             <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
                             </span>
@@ -96,7 +76,7 @@
                 <div>
                     <h2><span class="echo-word-label heading-text"></span></h2>
                     <div class="fl-uiOptions-onoff">
-                        <input type="checkbox" id="echo-word" class="echo-word-value fl-force-left" />
+                        <input type="checkbox" id="echo-word" class="gpii-wordEcho echo-word-value fl-force-left" />
                         <label for="echo-word">
                             <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
                             </span>
@@ -109,7 +89,7 @@
                 <div>
                     <h2><span class="braille-label heading-text"></span></h2>
                     <div class="fl-uiOptions-onoff">
-                        <input type="checkbox" id="braille" class="braille-value fl-force-left" />
+                        <input type="checkbox" id="braille" class="gpii-screenReaderBrailleOutput braille-value fl-force-left" />
                         <label for="braille">
                             <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
                             </span>
@@ -142,10 +122,10 @@
         $("#preferenceSwitch").change(function () {
             if ($(this).attr("checked")) {
                 $("#more-options").text("more options")
-                $(".speech-rate").slideDown();
+                $("#speech-rate").slideDown();
                 $("#more-options").slideDown();
             } else {
-                $(".speech-rate").slideUp();
+                $("#speech-rate").slideUp();
                 $("#more-options").slideUp();
                 slideExpandedUp();
             };
