Showing the multipler in cursor-size and magnifier. Added defaults for cursor-size and magnifier.

--- a/src/pmt/html/UIOptionsTemplate-magnifier.html
+++ b/src/pmt/html/UIOptionsTemplate-magnifier.html
@@ -6,6 +6,6 @@
             <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"> </div>
             <div class="fl-icon-magnifierMAX"></div>            
         </div>
-        <div class="fl-slider-input" style="display: none;"><input id="magnifier" class="flc-textfieldSlider-field" type="text" /> <span class="flc-uiOptions-multiplier"></span></div>
+        <div class="fl-slider-input" style=""><input id="magnifier" class="flc-textfieldSlider-field" type="text" /> <span class="flc-uiOptions-multiplier"></span></div>
     </div>
 </div>
