--- a/src/pmt/html/UIOptionsTemplate-cursorSize.html
+++ b/src/pmt/html/UIOptionsTemplate-cursorSize.html
@@ -6,6 +6,6 @@
             <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"> </div>
             <div class="fl-icon-big-a" aria-label="Icon of a large capital letter 'A'" role="img"></div>            
         </div>
-        <div class="fl-slider-input" style="display: none;"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /> <span class="flc-uiOptions-multiplier"></span></div>
+        <div class="fl-slider-input" style=""><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /> <span class="flc-uiOptions-multiplier"></span></div>
     </div>
 </div>
