--- a/src/pmt/html/FullPreviewUIOptions.html
+++ b/src/pmt/html/FullPreviewUIOptions.html
@@ -1,11 +1,15 @@
 <form id="options" action="" class="fl-uiOptions fl-uiOptions-fullPreview fl-focus flc-uiOptions-iframe">
     <div class="fl-container-flex60 fl-force-left">
 
-		<h2 class="">increase size</h2>
+		<h1 class="">Size</h1>
+		<h2 class="">Appearance</h2>
         <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div><br/>
         <div class="flc-uiOptions-cursor-size fl-uiOptions-category fl-uiOptions-text"></div><br/>
+		<br/><br/>
+		<!-- <h2 class="">Magnifier</h2> -->
         <div class="flc-uiOptions-magnifier fl-uiOptions-category fl-uiOptions-text"></div><br/>
-        <!-- <br/><br/><br/><br/><br/> -->
+
+        <br/><br/><br/><br/><br/>
         <div class="flc-uiOptions-line-space fl-uiOptions-category fl-uiOptions-text"></div>
         <!-- <h2 class="fl-uiOptions-text-icon">Text and display</h2>
         <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
