Trying to make a Full page with Preview UIOptions component. Haven't succeeded yet.

--- a/src/pmt/html/FullPreviewUIOptions.html
+++ b/src/pmt/html/FullPreviewUIOptions.html
@@ -1,4 +1,4 @@
-<form id="options" action="" class="fl-uiOptions fl-uiOptions-fullPreview fl-focus flc-uiOptions-iframe">
+<form id="options" action="" class="fl-uiOptions fl-uiOptions-fullPreview fl-focus">
     <div class="fl-container-flex60 fl-force-left">
 
 		<h1 class="">Size</h1>
