--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -17,16 +17,31 @@
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
     <script type="text/javascript" src="../../src/pmt/js/PreferencesManagementTool.js"></script>
 
+    <script type="text/javascript" src="demo.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
     	//fluid.uiOptions.constructed.uio(".flc-uiOpions-fatPanel");
 
-        var uioBuilder = fluid.uiOptions.builder({
+        /* var uioBuilder = fluid.uiOptions.builder({
             primarySchema: fluid.uiOptions.pmt.primarySchema,
             auxiliarySchema: fluid.uiOptions.pmt.auxiliarySchema
         });
-        fluid.invokeGlobalFunction(uioBuilder.options.assembledUIOGrade, ["#myUIOptions"]);
+        fluid.invokeGlobalFunction(uioBuilder.options.assembledUIOGrade, ["#myUIOptions"]); */
 
+        demo.initFullWithPreview("#myUIOptions", {
+            components: {
+                uiOptions: {
+                    options: {
+                        preview: {
+                            options: {
+                                templateUrl: "uiOptionsPreview.html"
+                            }
+                        }
+                    }
+                }
+            }
+        });
+        
     	//fluid.uiOptions.constructed.uie();
     })
 </script>
@@ -41,8 +56,6 @@
 
     <!-- This is the div that will contain the UI Options component -->
     <div id="myUIOptions">
-    	<div class="flc-uiOptions-iframe">
-        </div>
     </div>
 
 </body>
