GPII-153: Added message bundles. Cleaned speakTextTemplate.html a bit.

--- a/src/shared/adjusters/html/speakTextTemplate.html
+++ b/src/shared/adjusters/html/speakTextTemplate.html
@@ -21,19 +21,19 @@
         <div id="expanded-top">
             <h4>Screen reader</h4>
             <div>
-                <h2><label class="gpii-auditoryOutLanguage-label" for="languages">Language</label></h2>
+                <h2><label class="gpii-auditoryOutLanguage-label" for="languages"></label></h2>
                 <select class="gpii-auditoryOutLanguage fl-inputs" id="languages"></select>
             </div>
         </div>
 
         <div>
-            <h2><label class="gpii-speechRate-label" for="speech-rate">Speech rate</label></h2>
+            <h2><label class="gpii-speechRate-label" for="speech-rate"></label></h2>
             <select class="gpii-speechRate fl-inputs" id="speech-rate"></select>
         </div>
 
         <div id="expanded-bottom">
             <div>
-                <h2><label class="gpii-punctuationVerbosity-label" for="punctuation">Punctuation verbosity</label></h2>
+                <h2><label class="gpii-punctuationVerbosity-label" for="punctuation"></label></h2>
                 <select class="gpii-punctuationVerbosity fl-inputs" id="punctuation"></select>
             </div>
 
@@ -44,7 +44,6 @@
                     <label for="announce-uppercase">
                         <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
                         </span>
-                        Caps
                     </label>
                 </div>
             </div>
@@ -56,7 +55,6 @@
                     <label for="announce-instructions">
                         <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
                         </span>
-                        Provide instructions
                     </label>
                 </div>
             </div>
@@ -69,7 +67,6 @@
                         <label for="echo-letter">
                             <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
                             </span>
-                            letter echo
                         </label>
                     </div>
                 </div>
@@ -81,13 +78,12 @@
                         <label for="echo-word">
                             <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
                             </span>
-                            key echo
                         </label>
                     </div>
                 </div>
             </div>
             <div>
-                <h2><label for="braille" class="gpii-screenReaderBrailleOutput-label">Braille</label></h2>
+                <h2><label for="braille" class="gpii-screenReaderBrailleOutput-label"></label></h2>
                 <div class="gpii-screenReaderBrailleOutput-description"></div>
                 <div class="fl-uiOptions-onoff">
                     <input type="checkbox" id="braille" class="gpii-screenReaderBrailleOutput" />
