GPII-153: Checkboxes' labels fixed

--- a/src/shared/adjusters/html/speakTextTemplate.html
+++ b/src/shared/adjusters/html/speakTextTemplate.html
@@ -19,66 +19,50 @@
         <div id="more-options"> more options </div>
 
         <div id="expanded-top">
-            <h4>Screen reader</h4>
+            <h2>Screen reader</h2>
             <div>
-                <h2><label class="gpii-auditoryOutLanguage-label" for="languages"></label></h2>
+                <label class="gpii-auditoryOutLanguage-label" for="languages"></label><br>
                 <select class="gpii-auditoryOutLanguage fl-inputs" id="languages"></select>
             </div>
         </div>
 
         <div>
-            <h2><label class="gpii-speechRate-label" for="speech-rate"></label></h2>
+            <label class="gpii-speechRate-label" for="speech-rate"></label><br>
             <select class="gpii-speechRate fl-inputs" id="speech-rate"></select>
         </div>
 
         <div id="expanded-bottom">
             <div>
-                <h2><label class="gpii-punctuationVerbosity-label" for="punctuation"></label></h2>
+                <label class="gpii-punctuationVerbosity-label" for="punctuation"></label><br>
                 <select class="gpii-punctuationVerbosity fl-inputs" id="punctuation"></select>
             </div>
 
             <div>
-                <h2><span class="gpii-announceCapitals-label"></span></h2>
+                <label for="announce-uppercase"><span class="gpii-announceCapitals-label"></span></label>
                 <div class="fl-uiOptions-onoff">
                     <input type="checkbox" id="announce-uppercase" class="gpii-announceCapitals" />
-                    <label for="announce-uppercase">
-                        <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
-                        </span>
-                    </label>
                 </div>
             </div>
 
             <div>
-                <h2><span class="gpii-speakTutorialMessages-label"></span></h2>
+                <label for="announce-instructions"><span class="gpii-speakTutorialMessages-label"></span></label>
                 <div class="fl-uiOptions-onoff">
                     <input type="checkbox" id="announce-instructions" class="gpii-speakTutorialMessages" />
-                    <label for="announce-instructions">
-                        <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
-                        </span>
-                    </label>
                 </div>
             </div>
             <div>
-                <label> Read-back </label> <br>
+                <br> <label> Read-back </label> <br>
                 <div>
-                    <h2><span class="gpii-keyEcho-label"></span></h2>
+                    <label for="echo-letter"><span class="gpii-keyEcho-label"></span></label>
                     <div class="fl-uiOptions-onoff">
                         <input type="checkbox" id="echo-letter" class="gpii-keyEcho" />
-                        <label for="echo-letter">
-                            <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
-                            </span>
-                        </label>
                     </div>
                 </div>
 
                 <div>
-                    <h2><span class="gpii-wordEcho-label"></span></h2>
+                    <label for="echo-word"><span class="gpii-wordEcho-label"></span></label>
                     <div class="fl-uiOptions-onoff">
                         <input type="checkbox" id="echo-word" class="gpii-wordEcho" />
-                        <label for="echo-word">
-                            <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
-                            </span>
-                        </label>
                     </div>
                 </div>
             </div>
