Reference some needed CSS files for Full page with preview. Re-enabled enactors for text-size and line-space. Changes are previewed correctly.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-wb-uio.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-lgdg-uio.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-dglg-uio.css" />
+	<link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/UIOptions.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/FullUIOptions.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/FullPreviewUIOptions.css" />
 
     <link rel="stylesheet" type="text/css" href="demo.css" />
 
