GPII-140: master merged in, heading tweak

--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -37,7 +37,7 @@
         <header id="main-header">
             <div id="main-header-content">
                 <span class="fl-icon-tree" aria-label="Generic Logo" role="image"></span>
-				<span class="fl-header-title">The Open Learning Library</span>
+				<span class="fl-header-title">Richmond Open Learning</span>
                 <div>
                     <input type="search" placeholder="SEARCH" /> <span class="fl-icon-search" role="presentation"></span><a href="#" class="subjects">Subjects</a>
                 </div>
